
 - gradgen() allocated the wrong amount of space (always too much) for
   the color array.  CID 185291.

 - avoid dead code in i_tt_glyph_names(). CID 185321.

 - avoid dead code in i_get_anonymous_color_histo(), which is the
   implementation of getcolorusage().  CID 185327.

 - avoid dead code in i_ft2_glyph_name(), which is the implementation
   of glyph_names() for FT2.  CID 185342.

 - avoid an unneeded EXTEND() call when the FT2 has_chars()
   implementation returns 0. CID 185292.

 - the unpack code for ICO/CUR file handling could extend 32-bit
   unsigned values to 64-bit signed.  I believe this is harmless. CID
   185319.

 - remove an unneeded check when terminating the stream for JPEG
   writing.  CID 185347.

Imager 1.008 - 31 Dec 2018
============

 - moved EXIF handling from Imager::File::JPEG to core Imager
   This allows file formats that store EXIF data as blobs similarly
   to JPEG to re-use this code. (such as Imager::File::WEBP)

 - added some more file extensions to image file type mappings

 - added add_type_extensions() class method

Imager 1.007 - 24 Nov 2018
============

 - add png_compression_level tag for writing PNG files.

 - avoid flooring a second time in matrix transform interpolation.
   https://rt.cpan.org/Ticket/Display.html?id=124001

 - produce v2 metadata.
   Includes change from the ticket and updates to sub-modules.
   https://rt.cpan.org/Ticket/Display.html?id=127216

 - improve error reporting for the polygon() method

Imager 1.006 - 26 Aug 2017
============

 - the internal i_errors() function now correctly allocates the stack
   space needed for its result.
   https://rt.perl.org/rt3/Ticket/Display.html?id=131938

 - t/100-base/020-color.t now uses Imager::Test's test functions
   instead of its own.
   https://rt.cpan.org/Ticket/Display.html?id=111993

 - write_multi() now returns an error result (a false value) if called
   with a non-(Imager image object).  Previously it would typically
   crash.